package creational._3_abstract_factory.ui;

public abstract class Button {
	public abstract void click();
}
