package creational._3_abstract_factory.ui;

public abstract class CheckBox {
	public abstract void check();
}
