package creational._3_abstract_factory.ui;

public abstract class Scrollbar {
	public abstract void wheel();
}
